--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=feedback360
+
+# Configuração do banco H2
+spring.datasource.url=jdbc:h2:mem:feedback360
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Mostrar o console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configuração JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
